--- a/Progetto.Paradigmi/Progetto.Paradigmi.Test/Progetto.Paradigmi.Test.csproj
+++ b/Progetto.Paradigmi/Progetto.Paradigmi.Test/Progetto.Paradigmi.Test.csproj
@@ -12,4 +12,9 @@
       <ProjectReference Include="..\Paradigmi.Models\Paradigmi.Models.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.3" />
+      <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+    </ItemGroup>
+
 </Project>
