--- a/Progetto.Paradigmi/Paradigmi.Application/Paradigmi.Application.csproj
+++ b/Progetto.Paradigmi/Paradigmi.Application/Paradigmi.Application.csproj
@@ -14,4 +14,8 @@
       <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Paradigmi.Models\Paradigmi.Models.csproj" />
+    </ItemGroup>
+
 </Project>
