--- a/Progetto.Paradigmi/Paradigmi.Web/Properties/launchSettings.json
+++ b/Progetto.Paradigmi/Paradigmi.Web/Properties/launchSettings.json
@@ -1,7 +1,15 @@
 ﻿{
-  "$schema": "http://json.schemastore.org/launchsettings.json",
+  "$schema": "https://json.schemastore.org/launchsettings.json",
+  "iisSettings": {
+    "windowsAuthentication": false,
+    "anonymousAuthentication": true,
+    "iisExpress": {
+      "applicationUrl": "http://localhost:13502",
+      "sslPort": 44306
+    }
+  },
   "profiles": {
-    "Paradigmi.Web": {
+    "Unicam.Paradigmi.Web - Development": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
@@ -9,6 +17,14 @@
       "applicationUrl": "https://localhost:7067;http://localhost:5208",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
+      },
+      "IIS Express": {
+        "commandName": "IISExpress",
+        "launchBrowser": true,
+        "launchUrl": "swagger",
+        "environmentVariables": {
+          "ASPNETCORE_ENVIRONMENT": "Development"
+        }
       }
     }
   }
