--- a/Progetto.Paradigmi/Paradigmi.Web/appsettings.json
+++ b/Progetto.Paradigmi/Paradigmi.Web/appsettings.json
@@ -12,5 +12,6 @@
     "Key": "Unicam.ParadigmiChiave1234567890123",
     "Issuer": "https://progettoparadigmi.unicam.it"
   },
+  "PastoCompleto":["antipasto","primo","secondo","contorno","dolce"],
   "AllowedHosts": "*"
 }
